force-app/main/default/objects/Questionnaire_Result__c/Questionnaire_Result__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Result</label>
    <nameField>
        <displayFormat>Q-{0000000000}</displayFormat>
        <label>Questionnaire Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>