force-app/main/default/objects/Questionnaire_Result__c/fields/Choice_Answer__c.field-meta.xml
<CustomField>
    <fullName>Choice_Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Choice Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>