force-app/main/default/objects/Questionnaire_Result__c/fields/FNA_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>FNA_Activity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FNA Activity Name</label>
    <referenceTo>FNA_Activity__c</referenceTo>
    <relationshipLabel>Questionnaire Results</relationshipLabel>
    <relationshipName>Questionnaire_Results</relationshipName>
    <type>Lookup</type>
</CustomField>