force-app/main/default/objects/Questionnaire_Result__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question ID</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questionnaire Results</relationshipLabel>
    <relationshipName>Questionnaire_Results</relationshipName>
    <type>Lookup</type>
</CustomField>